npds.free.fr

Site Change Log:

01/01/2012	[Grant Hutchinson]
	* Updated the copyright notice

15/01/2011	[Grant Hutchinson]
	* Updated the copyright notice
	* Added Glenn Baggott's server to /trackers/index.html
	* Added Tony Kan's server to /trackers/index.html

08/12/2010	[Grant Hutchinson]
	* Updated tracker server information on /trackers/index.html

08/09/2010	[Grant Hutchinson]
	* Updated link to Matt Vaughn's site on the home page

02/01/2010	[Grant Hutchinson]
	* Updated the copyright notice

05/12/2009	[Grant Hutchinson]
	* Added redirect handlers for a couple of old legacy pages
	* Finally got the pretty icons working for module directory listings

09/11/2009	[Grant Hutchinson]
	* Updated tracker server information on /trackers/index.html

24/01/2009	[Grant Hutchinson]
	* Updated tracker server information on /trackers/index.html
	* Added Paul Filmer's server to /trackers/index.html

15/01/2009	[Grant Hutchinson]
	* Added Twitter links to the header, footer, and /index.html

10/01/2009	[Grant Hutchinson]
	* Updated the copyright notice
	* Nuked a gremlin that had been lurking in a meta element on /index.html

06/11/2007	[Grant Hutchinson]
	* Fixed links to /trackers/ and /list/ on /index.html

27/10/2007	[Grant Hutchinson]
	* Added mailing list unsubscribe information to /list/index.html
	* Enkoder'd the email addresses on /list/index.html
	* Other minor updates to the mailing list information

22/10/2007	[Grant Hutchinson]
	* Minor updates to common page footer and style sheet

11/10/2007	[Grant Hutchinson]
	* Added credits.txt to /scripts

27/06/2007	[Grant Hutchinson]
	* Added MicroID site claim meta tag to /index.html
	
18/06/2007	[Grant Hutchinson]
	* Changed align attributes on home page image to use float:right style
	* Renamed Port Number section on /trackers/index.html
	* Fixed duplicate anchor id on /trackers/index.html
	* Added header, footer and wrapper divs to /docs/new/NotepadServerSyntax.html
	* Updated /error.html to new formatting